--- a/web/pluto-admin/scripts/treeview/demoFuncs.html
+++ b/web/pluto-admin/scripts/treeview/demoFuncs.html
@@ -25,7 +25,7 @@ function exampleFunction(message)
 // starts with "op"; it will conflict with some special Treeview code.
 function windowWithoutToolbar(urlStr, width, height) 
 { 
-   window.open(urlStr, '_blank', 'location=no,status=no,scrollbars=no,menubar=no,toolbar=no,directories=no,resizable=no,width=' + width + ',height=' + height) 
+   window.open(urlStr, '_blank', 'location=0,status=0,scrollbars=0,menubar=0,toolbar=0,directories=0,resizable=0,width=' + width + ',height=' + height) 
 }
 </script>
 </head>
