Refs #744 - Show activity after touching the screen

--- a/web/lmce-admin/weborbiter/weborbiter.html
+++ b/web/lmce-admin/weborbiter/weborbiter.html
@@ -22,6 +22,10 @@
 		<p>Orbiter proxy not found.</p>
 <!-- END NotFound -->
 <!-- BEGIN Orbiter -->
+		<div>	
+			<img id="waiting" alt="waiting info" style="display:
+		none;" src="weborbiter/waiting.gif" />
+		</div>
 		<div>
 			<img id="screen" alt="WebOrbiter Screen" onclick="sendTouch(event, {DeviceNumber})"
 				src="weborbiter_image.php?device_id={DeviceNumber}&amp;rand={ImgRandom}"
