--- a/web/lmce-admin/weborbiter/weborbiter.html
+++ b/web/lmce-admin/weborbiter/weborbiter.html
@@ -23,8 +23,7 @@
 <!-- END NotFound -->
 <!-- BEGIN Orbiter -->
 		<div>	
-			<img id="waiting" alt="waiting info" style="display:
-		none;" src="weborbiter/waiting.gif" />
+			<img id="waiting" alt="waiting info" src="weborbiter/waiting.gif" />
 		</div>
 		<div>
 			<img id="screen" alt="WebOrbiter Screen" onclick="sendTouch(event, {DeviceNumber})"
