refs #741 - move SuperTux to distinct file, add simple waiting.gif for people to choose (using vim/joe/emacs for now rather than a nice web interface)

--- a/web/lmce-admin/weborbiter/weborbiter.html
+++ b/web/lmce-admin/weborbiter/weborbiter.html
@@ -23,7 +23,7 @@
 <!-- END NotFound -->
 <!-- BEGIN Orbiter -->
 		<div>	
-			<img id="waiting" alt="waiting info" src="weborbiter/waiting.gif" />
+			<img id="waiting" alt="waiting info" src="weborbiter/waiting-SuperTux.gif" />
 		</div>
 		<div>
 			<img id="screen" alt="WebOrbiter Screen" onclick="sendTouch(event, {DeviceNumber})"
