--- a/web/lmce-admin/weborbiter/weborbiter.html
+++ b/web/lmce-admin/weborbiter/weborbiter.html
@@ -17,23 +17,23 @@
 		<link rel="stylesheet" type="text/css" href="weborbiter/weborbiter.css" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	</head>
-	<body onload="PageLoaded({DeviceNumber})" onkeydown="sendKey(event, {DeviceNumber})">
+	<body onload="PageLoaded({DeviceNumber})" onkeydown="sendKey(event)">
 <!-- BEGIN NotFound -->
 		<p>Orbiter proxy not found.</p>
 <!-- END NotFound -->
 <!-- BEGIN Orbiter -->
 		<div>	
-			<img id="waiting" alt="waiting info" src="weborbiter/waiting-SuperTux.gif" />
+			<img id="waiting" alt="waiting info" src="weborbiter/waiting.gif" />
 		</div>
 		<div>
-			<img id="screen" alt="WebOrbiter Screen" onclick="sendTouch(event, {DeviceNumber})"
+			<img id="screen" alt="WebOrbiter Screen" onclick="sendTouch(event)"
 				src="weborbiter_image.php?device_id={DeviceNumber}&amp;rand={ImgRandom}"
 			/>
 		</div>
 		<div>
-			<input type="button" value="Home" onclick="DoCmd('PLUTO_KEY 10',{DeviceNumber});" />
-			<input type="button" value="Back" onclick="DoCmd('PLUTO_KEY 11',{DeviceNumber});" />
-			<input type="button" value="Refresh" onclick="DoCmd('IMAGE', {DeviceNumber});" />
+			<input type="button" value="Home" onclick="DoCmd('PLUTO_KEY 10');" />
+			<input type="button" value="Back" onclick="DoCmd('PLUTO_KEY 11');" />
+			<input type="button" value="Refresh" onclick="DoCmd('IMAGE');" />
 			<input type="button" value="Exit" onclick="self.close();" />
 			<input type="button" value="Log out" onclick="$('#logout_form').submit()" />
 		</div>
