Refs #1041 - Some correction re RayBe's comments

--- a/src/Orbiter/iOS/RoamingOrb/Resources/nopvr.html
+++ b/src/Orbiter/iOS/RoamingOrb/Resources/nopvr.html
@@ -17,6 +17,6 @@
 <h1 class="text">No PVR</h1>
 <p class="text">No PVR backend was found on your CORE.</p>
 <p class="text">Is MythTV installed ?</p>
-<p class="text">Please note: If you use VCR there is currently no web backend available in LinuxMCE</p>
+<p class="text">Please note: If you use VCR instead of MythTV there is currently no web backend available in LinuxMCE</p>
 </body>
 </html>
