--- a/web/lmce-admin/weborbiter/weborbiter.html
+++ b/web/lmce-admin/weborbiter/weborbiter.html
@@ -17,7 +17,7 @@
 		<link rel="stylesheet" type="text/css" href="weborbiter/weborbiter.css" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	</head>
-	<body onload="PageLoaded({DeviceNumber})" onkeydown="sendKey(event)">
+	<body onload="PageLoaded({DeviceNumber})">
 <!-- BEGIN NotFound -->
 		<p>Orbiter proxy not found.</p>
 <!-- END NotFound -->
